# ordinal-folding-index

./: README.md  embedding_contraction.py  main.py  pyproject.toml
benchmarks/: bench1.py
ordinal_folding/: __init__.py  embedding_contraction.py
