[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ordinal-folding-index"
version = "0.1.0"
description = "Utilities for the ordinal folding index and embedding contraction"
authors = [{name = "Ordinal Folding Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[tool.setuptools]
packages = ["ordinal_folding"]
